--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -27,7 +27,7 @@
     }
 
     .signup-card.signup-card {
-        margin-top: 40px;
+        margin-top: 28px;
     }
 
     .back-arrow.back-arrow {
@@ -104,7 +104,7 @@
     }
     
     .input-error.input-error {
-        font-size: 12px;
+        font-size: 16px;
     }
 }
 
